--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
     <header>
     <nav class="navbar-horizontal">
     <ul class="nav-links">
-        <li><a href="Index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="index2.html">Gallary</a></li>
         </ul>
     </nav>
